--- a/app/src/main/res/layout/activity_poster.xml
+++ b/app/src/main/res/layout/activity_poster.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/movie_poster"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:contentDescription="@string/movie_poster_contDescrip"
+    android:scaleType="centerCrop"
+    app:srcCompat="@android:drawable/list_selector_background"
+    tools:background="@mipmap/ic_launcher" />
 
-    <ImageView
-        android:id="@+id/movie_poster"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/movie_poster_contDescrip"
-        android:scaleType="centerCrop"
-        app:srcCompat="@android:drawable/list_selector_background"
-        tools:background="@mipmap/ic_launcher" />
-</FrameLayout>
