--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="grid_spacing">5dp</dimen>
+    <dimen name="detail_text_margin">8dp</dimen>
+    <dimen name="detail_image_margin">16dp</dimen>
 </resources>
