--- a/app/src/main/res/xml/user_selection.xml
+++ b/app/src/main/res/xml/user_selection.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
-        android:defaultValue="@string/popularity_sort_default"
+        android:defaultValue="@string/popularity_sort_label_default"
         android:entries="@array/sort_by_list"
+        android:entryValues="@array/sort_by_values"
         android:key="@string/sort_by_key"
         android:title="@string/sort_by_label" />
 </PreferenceScreen>
