--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,6 +15,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="@dimen/detail_image_margin"
             android:layout_marginTop="@dimen/detail_image_margin"
+            android:contentDescription="@string/poster_thumb_contentDescrip"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/ic_launcher" />
@@ -70,10 +71,12 @@
         <TextView
             android:id="@+id/synopsis_tv"
             style="@style/text"
+            android:layout_width="0dp"
+            android:layout_marginEnd="@dimen/detail_text_margin"
+            android:layout_marginRight="@dimen/detail_text_margin"
             android:layout_marginTop="@dimen/detail_text_margin"
             android:contentDescription="@string/synopsis_contDescrip"
-            android:paddingEnd="@dimen/detail_text_margin"
-            android:paddingRight="@dimen/detail_text_margin"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/synopsis_label_tv"
             app:layout_constraintTop_toBottomOf="@+id/synopsis_label_tv"
             tools:text="A couple of lines describing the synopsis of the movie." />
