--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -27,8 +27,9 @@
             style="@style/text.review"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="@dimen/detail_text_margin"
+            android:layout_marginEnd="@dimen/detail_text_margin"
+            android:layout_marginRight="@dimen/detail_text_margin"
             android:layout_marginTop="@dimen/detail_text_margin"
             android:contentDescription="@string/review_contDescrip"
             app:layout_constraintBottom_toBottomOf="parent"
